--- a/HelloWorld.Rmd
+++ b/HelloWorld.Rmd
@@ -1,5 +1,14 @@
 ---
-## This is a markdown file
+title: "Assignment"
+author: "Adrian Aliyuddin"
+date: "7/24/2020"
+output: pdf_document
 ---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+## This is a markdown file 
 
 
